# dotParser

./: LICENSE  README.md  dotParser.cabal
app/: Main.hs
src/Data/: GraphViz.hs
test/: TestDot1.dot  TestDot2.dot  TestDot3.dot  TestDot4.dot  TestDot5.dot  TestDot6.dot  TestDot7.dot  TestDot8.dot
