name:                dotParser
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/MicheleCastrovilli/dotParser#readme
license:             BSD3
license-file:        LICENSE
author:              Michele Castrovilli
maintainer:          michele.castrovilli@gmail.com
copyright:           Copyright (C) 2016 Michele Castrovilli
category:            Experimental
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.GraphViz 
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , parsers
  ghc-options:         -Wall
  default-language:    Haskell2010

executable dotParser
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , dotParser
  default-language:    Haskell2010

test-suite dotParser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dotParser
                     , QuickCheck
                     , HSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MicheleCastrovilli/dotParser
